--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -577,6 +577,11 @@ video {
   z-index: 50;
 }
 
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mb-6{
   margin-bottom: 1.5rem;
 }
@@ -627,6 +632,30 @@ video {
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.mt-20{
+  margin-top: 5rem;
+}
+
+.mb-20{
+  margin-bottom: 5rem;
+}
+
+.mr-12{
+  margin-right: 3rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.ml-12{
+  margin-left: 3rem;
+}
+
+.mr-6{
+  margin-right: 1.5rem;
 }
 
 .flex{
@@ -685,6 +714,18 @@ video {
   height: 24rem;
 }
 
+.h-52{
+  height: 13rem;
+}
+
+.h-32{
+  height: 8rem;
+}
+
+.min-h-screen{
+  min-height: 100vh;
+}
+
 .w-36{
   width: 9rem;
 }
@@ -717,6 +758,14 @@ video {
   width: 75%;
 }
 
+.w-52{
+  width: 13rem;
+}
+
+.max-w-7xl{
+  max-width: 80rem;
+}
+
 .translate-x-0{
   --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -733,6 +782,10 @@ video {
 
 .flex-col{
   flex-direction: column;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .items-end{
@@ -770,6 +823,10 @@ video {
 
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .rounded-t-\[70px\]{
@@ -917,6 +974,15 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -1025,6 +1091,11 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.target\:bg-blue-300:target{
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
 .hover\:cursor-pointer:hover{
   cursor: pointer;
 }
@@ -1037,6 +1108,11 @@ video {
 .hover\:bg-red-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.hover\:underline:hover{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 
 .active\:bg-stone-200:active{
