--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -536,6 +536,40 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .fixed{
   position: fixed;
 }
@@ -796,6 +830,10 @@ video {
   flex-wrap: wrap;
 }
 
+.items-start{
+  align-items: flex-start;
+}
+
 .items-end{
   align-items: flex-end;
 }
@@ -841,11 +879,6 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded-t-\[70px\]{
-  border-top-left-radius: 70px;
-  border-top-right-radius: 70px;
-}
-
 .border-2{
   border-width: 2px;
 }
@@ -856,11 +889,6 @@ video {
 
 .border-t-2{
   border-top-width: 2px;
-}
-
-.border-black{
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-gray-200{
@@ -883,6 +911,16 @@ video {
   border-color: rgb(87 83 78 / var(--tw-border-opacity));
 }
 
+.bg-\[\#5c3b28\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(92 59 40 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f8e8d3\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 232 211 / var(--tw-bg-opacity));
+}
+
 .bg-green-400{
   --tw-bg-opacity: 1;
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
@@ -896,11 +934,6 @@ video {
 .bg-red-600{
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.bg-stone-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
 }
 
 .bg-stone-400{
@@ -936,10 +969,6 @@ video {
   padding: 0.25rem;
 }
 
-.p-10{
-  padding: 2.5rem;
-}
-
 .p-2{
   padding: 0.5rem;
 }
@@ -954,6 +983,10 @@ video {
 
 .p-5{
   padding: 1.25rem;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .p-8{
@@ -1078,9 +1111,14 @@ video {
   line-height: 1rem;
 }
 
-.text-gray-500{
+.text-\[\#5c3b28\]{
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(92 59 40 / var(--tw-text-opacity));
+}
+
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-red-500{
@@ -1113,8 +1151,19 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline{
@@ -1357,12 +1406,16 @@ video {
     height: 5rem;
   }
 
-  .lg\:h-4\/5{
-    height: 80%;
-  }
-
   .lg\:h-96{
     height: 24rem;
+  }
+
+  .lg\:w-1\/3{
+    width: 33.333333%;
+  }
+
+  .lg\:w-2\/3{
+    width: 66.666667%;
   }
 
   .lg\:w-2\/5{
@@ -1371,10 +1424,6 @@ video {
 
   .lg\:w-4\/12{
     width: 33.333333%;
-  }
-
-  .lg\:w-4\/5{
-    width: 80%;
   }
 
   .lg\:w-40{
@@ -1397,14 +1446,13 @@ video {
     flex-direction: row;
   }
 
+  .lg\:flex-nowrap{
+    flex-wrap: nowrap;
+  }
+
   .lg\:gap-x-24{
     -moz-column-gap: 6rem;
          column-gap: 6rem;
-  }
-
-  .lg\:rounded-t-3xl{
-    border-top-left-radius: 1.5rem;
-    border-top-right-radius: 1.5rem;
   }
 
   .lg\:px-0{
